[gd_scene load_steps=7 format=3 uid="uid://bagraegk311h0"]

[ext_resource type="PackedScene" uid="uid://c1g50h2avck3w" path="res://scenes/credits/credits.tscn" id="1_885d8"]
[ext_resource type="Script" uid="uid://cn3sc0vsd5b1r" path="res://scenes/end_credits/end_credits.gd" id="2_6pwj4"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/scripts/capture_focus.gd" id="3_aoilo"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="3_v7acr"]
[ext_resource type="AudioStream" uid="uid://nld7esk0psis" path="res://assets/music/ambient_vol2_glorious_main.mp3" id="4_78loh"]
[ext_resource type="Texture2D" uid="uid://dipxjl21f43po" path="res://assets/narrative/credits.png" id="4_jjp6q"]

[node name="EndCredits" instance=ExtResource("1_885d8")]
script = ExtResource("2_6pwj4")
main_menu_scene = "uid://c63y6b25bs4bk"

[node name="BackgroundMusicPlayer" parent="." index="0" instance=ExtResource("3_v7acr")]
stream = ExtResource("4_78loh")

[node name="BackgroundColor" type="ColorRect" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundTextureRect" type="TextureRect" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jjp6q")
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" parent="." index="3"]
scroll_vertical = 0

[node name="CreditsLabel" parent="ScrollContainer/VBoxContainer" index="1"]
text = "[center]
[font_size=64]Lost Rabbit Digital[/font_size]
(Check us out on GitHub)[https://github.com/Lost-Rabbit-Digital]

[font_size=48]Programmers[/font_size]
[url=https://www.bodenmchale.com/]Boden McHale[/url]
[url=https://bsky.app/profile/heartcoded.bsky.social]David McHale[/url]

[font_size=48]Character / VFX / UI Artists[/font_size]
[url=https://lanigram.imgbb.com/]Oleksii Lotokhov[/url]

[font_size=48]Landscape Artists / Animators[/font_size]
[url=https://x.com/StagnationDraws]StagNation[/url]

[font_size=48]Audio[/font_size]
[url=https://ovanisound.com/]Ovani[/url]

[font_size=48]Playtesters[/font_size]
[url=https://rankitdigitalmarketing.com]John S[/url]
[url=https://www.fiverr.com/mohamed_eshop]Mohamed M[/url]
[url=https://www.fiverr.com/ma31nho]Ma31n[/url]
[url=https://www.fiverr.com/nadeem_mostafa]Nadeem M[/url]
[url=https://www.fiverr.com/eldenizomerov]Eldaniz O[/url]

[font_size=64]Tools / Assets[/font_size]
[font_size=48]Godot[/font_size]
Author: [url=https://godotengine.org/contact]Juan Linietsky, Ariel Manzur, and contributors[/url]  
Source: [url=https://godotengine.org/]godotengine.org[/url]  
License: [url=https://github.com/godotengine/godot/blob/master/LICENSE.txt]MIT License[/url] 

[font_size=48]Godot Game Template[/font_size]
Author: [url=https://github.com/Maaack/Godot-Game-Template/graphs/contributors]Marek Belski and contributors[/url]  
Source: [url=https://github.com/Maaack/Godot-Game-Template]github: Godot-Game-Template[/url]  
License: [url=LICENSE.txt]MIT License[/url]  

[font_size=48]Emotes[/font_size]
Author: [url=https://kenney.nl/]Kenney[/url]
Source: [url=https://kenney.nl/assets/emotes-pack]Emotes Pack[/url]
	
[font_size=48]Social Icons[/font_size]
Author: [url=https://krinjl.itch.io/]KrinJL[/url]
Source: [url=https://krinjl.itch.io/icons2]Itch: Pixel Social Media Icon Pack Vol. 2[/url]

[font_size=48]Button SFX[/font_size]
Author: [url=https://opengameart.org/users/pauliuw]PauliuW[/url]
Source: [url=https://opengameart.org/content/click-sounds6]Click Sounds (6)[/url]

[font_size=48]FilmCow Royalty Free Sound Effects Library[/font_size]
Author: [url=https://filmcow.itch.io/]FilmCow[/url]
Source: [url=https://filmcow.itch.io/filmcow-sfx]itch: FilmCow Royalty Free Sound Effects Library[/url]

[font_size=48]Vehicle Artwork[/font_size]
Author: Arludus
Source [url=https://arludus.itch.io/2d-top-down-180-pixel-art-vehicles]itch: 2D Top Down Pixel Art Vehicles[/url]

[font_size=64]Community Help[/font_size]
Thank you to the generous members of our community. 
You who have tested, and reported many bugs for us to fix.

ZombieWhisperer
MrBright01 
dhjackal
jollylad63
Tanner

[font_size=64]Special Thanks[/font_size]
Thank you to our loved ones and support systems who helped us make this game a reality.
Special thanks to Safiya and Kobi McHale for lighting up our lives.

[font_size=64]In Memoriam, Ad Victoriam[/font_size]
GNU Michael McHale
GNU Sherri Jackson
[/center]"

[node name="CenterContainer" type="CenterContainer" parent="." index="4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="EndMessagePanel" type="Panel" parent="CenterContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EndMessagePanel" index="0"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="0"]
layout_mode = 2
bbcode_enabled = true
text = "[center]
You've stamped your way to victory! 
Amazing!
Enjoyed your time? 
A review would mean the world to us.
[url=https://store.steampowered.com/app/3291880/]Review Spud Customs on Steam
[/url][/center]
"
fit_content = true

[node name="ThankPlayer" type="Label" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="1"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "You've stamped your way to victory! 
Amazing!
Enjoyed your time? 
A review would mean the world to us.
[center]
[url=https://store.steampowered.com/app/3291880/]Buy Spud Customs on Steam[/url][/center]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
script = ExtResource("3_aoilo")

[node name="ExitButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[node name="MenuButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Menu"

[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
